--- a/app/src/main/res/layout/row_book.xml
+++ b/app/src/main/res/layout/row_book.xml
@@ -6,7 +6,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ivBook" />
+        android:id="@+id/ivBook"
+        android:src="@mipmap/ic_book"/>
+
 
     <EditText
         android:layout_width="match_parent"
