--- a/app/src/main/res/layout/row_book.xml
+++ b/app/src/main/res/layout/row_book.xml
@@ -10,7 +10,7 @@
         android:src="@mipmap/ic_book"/>
 
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bookName"
