--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="background_material_light">#fafafa</color>
     <color name="foreground_material_light">#000000</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
